tests/misc/misc.exp
Error -------------------------------------------------------------------------------------------------------- A.js:13:7

Cannot assign `A.y` to `A.x` because string [1] is incompatible with boolean [2].

   A.js:13:7
   13| A.x = A.y;
             ^^^

References:
   A.js:12:7
   12| A.y = "?";
             ^^^ [1]
   A.js:6:12
    6| var A = {x:true, ...{}};
                  ^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- A.js:14:3

Cannot call `f` with `A.x` bound to `x` because string [1] is incompatible with boolean [2].

   A.js:14:3
   14| f(A.x); // A.x is now a string, by def assign
         ^^^

References:
   A.js:12:7
   12| A.y = "?";
             ^^^ [1]
   A.js:9:14
    9| function f(x:boolean) { }
                    ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- C.js:9:5

Cannot get `o.b` because property `b` is missing in new object [1].

   C.js:9:5
   9|   f(o.b);
          ^^^

References:
   C.js:8:11
   8|   var o = new B();
                ^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- C.js:10:5

Cannot call `f` with `o.s` bound to `x` because number [1] is incompatible with boolean [2].

   C.js:10:5
   10|   f(o.s);
           ^^^

References:
   B.js:12:17
   12| B.prototype.s = 0;
                       ^ [1]
   A.js:9:14
    9| function f(x:boolean) { }
                    ^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- D.js:6:30

Cannot return `this.i` because boolean [1] is incompatible with string [2].

   D.js:6:30
   6| function g():string { return this.i; }
                                   ^^^^^^

References:
   D.js:9:7
   9| o.i = true;
            ^^^^ [1]
   D.js:6:14
   6| function g():string { return this.i; }
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- D.js:12:3

Cannot call `f` with `i` bound to `x` because string [1] is incompatible with boolean [2].

   D.js:12:3
   12| f(i);
         ^

References:
   D.js:6:14
    6| function g():string { return this.i; }
                    ^^^^^^ [1]
   A.js:9:14
    9| function f(x:boolean) { }
                    ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- E.js:8:6

Cannot call `o.fn` with `false` bound to `x` because boolean [1] is incompatible with number [2].

   E.js:8:6
   8| o.fn(false);
           ^^^^^ [1]

References:
   E.js:4:14
   4| function h(x:number) { }
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- F.js:1:26

Cannot perform arithmetic operation because string [1] is not a number.

   F.js:1:26
   1| function fn2(x) { return x.length * 4; }
                               ^^^^^^^^

References:
   F.js:2:14
   2| fn2({length: 'hi'});
                   ^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- F.js:5:10

Cannot return `x.length` because number [1] is incompatible with string [2].

   F.js:5:10
     5|   return x.length;
                 ^^^^^^^^

References:
   <BUILTINS>/core.js:295:13
   295|     length: number;
                    ^^^^^^ [1]
   F.js:4:33
     4| function foo(x: Array<number>): string {
                                        ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- G.js:2:12

Cannot assign `123` to `a.length` because number [1] is incompatible with string [2].

   G.js:2:12
   2| a.length = 123;
                 ^^^ [1]

References:
   G.js:1:19
   1| var a = { length: "duck" };
                        ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- G.js:3:1

Cannot call `a.length` because number [1] is not a function.

   G.js:3:1
   3| a.length();
      ^^^^^^^^^^

References:
   G.js:2:12
   2| a.length = 123;
                 ^^^ [1]


Error -------------------------------------------------------------------------------------------------------- G.js:6:12

Cannot assign `"duck"` to `b.length` because string [1] is incompatible with number [2].

   G.js:6:12
     6| b.length = "duck";
                   ^^^^^^ [1]

References:
   <BUILTINS>/core.js:295:13
   295|     length: number;
                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- G.js:7:1

Cannot call `b.length` because string [1] is not a function.

   G.js:7:1
   7| b.length();
      ^^^^^^^^^^

References:
   G.js:6:12
   6| b.length = "duck";
                 ^^^^^^ [1]



Found 13 errors
